--- a/html/contact.html
+++ b/html/contact.html
@@ -25,7 +25,7 @@
                         <nav id="OverlayMenu">
                             <p class="Index">INDEX.</p>
                             <ul class="flex_con">
-                                <li><a href="./main.html" id="indexPage"><p class="IndexNumber">01</p><p class="Sub">Main</p><p class="IndexUse">JavaScript, HTML, CSS</p></a></li>
+                                <li><a href="./index.html" id="indexPage"><p class="IndexNumber">01</p><p class="Sub">Main</p><p class="IndexUse">JavaScript, HTML, CSS</p></a></li>
                                 <li><a href="./works.html" id="workPage"><p class="IndexNumber2">02</p><p class="Sub">Works</p><p class="IndexUse">JavaScript, HTML, CSS, C#, Unity, Illustration</p></a></li>
                                 <li><a href="./about.html" id="AboutPage"><p class="IndexNumber">03</p><p class="Sub">About 乂</p></a></li>
                                 <li><a href="./contact.html" id="ContactPage"><p class="IndexNumber2">04</p><p class="Sub">Contact 乂</p></a></li>
