--- a/html/about.html
+++ b/html/about.html
@@ -67,6 +67,7 @@
             <ul>
                 <li>2019 디지털 미디어 디자인 연말 PT 기초 영상 우수작 선정</li>
                 <li>2020 CDAK 국제 커뮤니케이션 디자인 공모전 입선</li>
+                <li>2020 디지털미디어디자인 졸업 작품 심사 최우수작 선정 및 PT 우수작 선정</li>
             </ul>
         </p>
         <p class="bold">Programming Language</p>
