계속되는 수정

--- a/html/about.html
+++ b/html/about.html
@@ -98,9 +98,10 @@
             <li>조예슬입니다.</li>
         </ul> 
     </div>
-    <div class="footer">
+    <!-- 없는게 나을 듯? -->
+    <!-- <div class="footer">
         about 乂
-    </div>
+    </div> -->
     <script src="../js/typing.js"  type="text/javascript"></script>
 </body>
 </html>
