--- a/html/WhatYum.html
+++ b/html/WhatYum.html
@@ -56,7 +56,7 @@
     <div class="ContentsMenu">
         <ul class="_ContentMenu">
             <li class="_1" id="dynamic"></li>
-            <li class="_2"><strong>Use</strong> - AfterEffect</li>
+            <li class="_2"><strong>Use</strong> - AfterEffects</li>
             <li class="_3">
                 팀 프로젝트 '비상대책위원회'의 'WhatYum' 프로모션 영상입니다.
                 일러스트와 AfterEffect를 사용하여 MotionGraphic으로 영상을 제작하였습니다.
