--- a/html/Momentrip.html
+++ b/html/Momentrip.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link href="../css/reset.css" rel="stylesheet" />
-    <link href="../css/works.css" rel="stylesheet" />
+    <link href="../css/works_Momentrip.css" rel="stylesheet" />
     <link rel="SHORTCUT ICON" href="../img/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Noto+Serif:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
-    <title>Works</title>
+    <title>Momentrip</title>
 </head>
 <body>
+    <div class="loader" id="loader"></div>
     <div>
         <div class="nav">
             <div id="menu">
@@ -45,27 +46,41 @@
                 </div>
                 <div class="loader" id="loader"></div>
             </div>
+            <a href="../html/Takkoyakki.html"><div class="_line0"></div></a>
+            <a href="../html/works.html"><div class="_line"></div></a>
+            <a href="../html/MemoriesOfMatsuko.html"><div class="_line2"></div></a>
     </div>
     <div class="backcircle">
         <img class="imageCircle" src="../img/imageCircle.png" />
     </div>
     <div class="ContentsMenu">
         <ul class="_ContentMenu">
-            <li class="_1">Memories of Matsuko</li>
-            <li class="_2">MOONASSI</li>
-            <li class="_3">Takkoyakki 
-                Adventure</li>
-            <li class="_4">What YUM</li>
-            <li class="_5">NightOff</li>
-            <li class="_6">Momentrip</li>
+            <li class="_1" id="dynamic"></li>
+            <li class="_2"><strong>Use</strong> - HTML, CSS, Illustration, AfterEffects</li>
+            <li class="_3">
+                팀 프로젝트 'DarkCircle'의 'Momentrip' 프로젝트입니다.
+                Momentrip은 '순간을 여행하다'라는 키워드를 가진 여행 기록 어플리케이션으로써, 여행 기간동안
+                랜덤한 질문을 보내주어 그에 맞게 순간을 다양한 방식으로 여행을 기록하고 그 것을 아날로그 기록물로
+                받아볼 수 있는 서비스입니다.
+                서비스의 기획 및 일러스트, 영상, 반응형 웹 페이지 제작을 하였습니다.<br/>
+                반응형 웹페이지는 핸드폰 디바이스(375px), 태블릿(1000px), pc(1550px)를 기준으로 나눠 작업하였습니다.
+            </li>
         </ul>
     </div>
-
+    <div class="wrap-images">
+        <img id="ContentsImg" class="imageContents1 image zoom" src="../img/Momentrip.png" />
+        <!-- <img id="ContentsImg" class="imageContents2" src="../img/Contents1_1.jpg" />
+        <img id="ContentsImg" class="imageContents3" src="../img/Contents1_2.jpg" /> -->
+    </div>
+    <div class="download">
+        <img class="_imageCircle2" src="../img/imageCircle 2.png" />
+        <a href="http://dmdpro.cafe24.com/degreeshow/2020/website/momentrip/Momentrip.html"> <p class="_download">EXPLORE</p></a>
+    </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
+    <script src="../js/script_Momentrip.js"  type="text/javascript"></script>
     <script src="../js/worksClick.js"  type="text/javascript"></script>
-    <script src="../js/clickContentsList.js"  type="text/javascript"></script>
-    <script src="../js/works_hoverImage.js"  type="text/javascript"></script>
+    <script src="../js/zoomIn.js"  type="text/javascript"></script>
     <script src="../js/cursorImageHover.js"  type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
 </body>
