--- a/html/NightOff.html
+++ b/html/NightOff.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link href="../css/reset.css" rel="stylesheet" />
-    <link href="../css/works.css" rel="stylesheet" />
+    <link href="../css/work_whatYum.css" rel="stylesheet" />
     <link rel="SHORTCUT ICON" href="../img/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Noto+Serif:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
-    <title>Works</title>
+    <title>NightOff</title>
 </head>
 <body>
+    <div class="loader" id="loader"></div>
     <div>
         <div class="nav">
             <div id="menu">
@@ -45,27 +46,38 @@
                 </div>
                 <div class="loader" id="loader"></div>
             </div>
+            <a href="../html/Takkoyakki.html"><div class="_line0"></div></a>
+            <a href="../html/works.html"><div class="_line"></div></a>
+            <a href="../html/MemoriesOfMatsuko.html"><div class="_line2"></div></a>
     </div>
     <div class="backcircle">
         <img class="imageCircle" src="../img/imageCircle.png" />
     </div>
     <div class="ContentsMenu">
         <ul class="_ContentMenu">
-            <li class="_1">Memories of Matsuko</li>
-            <li class="_2">MOONASSI</li>
-            <li class="_3">Takkoyakki 
-                Adventure</li>
-            <li class="_4">What YUM</li>
-            <li class="_5">NightOff</li>
-            <li class="_6">Momentrip</li>
+            <li class="_1" id="dynamic"></li>
+            <li class="_2"><strong>Use</strong> - HTML, CSS</li>
+            <li class="_3">
+                좋아하는 밴드인 NightOff를 소개하는 웹페이지입니다.
+                처음 CSS의 여러 기능들을 이해하며 사용하고, 웹 표준을 익히기 위해 만들었습니다.
+                여러 태그를 알맞게 사용하고 주제와 맞는 분위기를 연출하고자 노력하였습니다.
+            </li>
         </ul>
     </div>
-
+    <div class="wrap-images">
+        <img id="ContentsImg" class="imageContents1 image zoom" src="../img/NightOff.jpg" />
+        <!-- <img id="ContentsImg" class="imageContents2" src="../img/Contents1_1.jpg" />
+        <img id="ContentsImg" class="imageContents3" src="../img/Contents1_2.jpg" /> -->
+    </div>
+    <div class="download">
+        <img class="_imageCircle2" src="../img/imageCircle 2.png" />
+        <a href="https://www.youtube.com/watch?v=RNNIMpShaoQ"> <p class="_download">EXPLORE</p></a>
+    </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
+    <script src="../js/script_NightOff.js"  type="text/javascript"></script>
     <script src="../js/worksClick.js"  type="text/javascript"></script>
-    <script src="../js/clickContentsList.js"  type="text/javascript"></script>
-    <script src="../js/works_hoverImage.js"  type="text/javascript"></script>
+    <script src="../js/zoomIn.js"  type="text/javascript"></script>
     <script src="../js/cursorImageHover.js"  type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
 </body>
