--- a/html/NightOff.html
+++ b/html/NightOff.html
@@ -60,7 +60,8 @@
             <li class="_3">
                 좋아하는 밴드인 NightOff를 소개하는 웹페이지입니다.
                 처음 CSS의 여러 기능들을 이해하며 사용하고, 웹 표준을 익히기 위해 만들었습니다.
-                여러 태그를 알맞게 사용하고 주제와 맞는 분위기를 연출하고자 노력하였습니다.
+                여러 태그를 알맞게 사용하고 주제와 맞는 분위기를 연출하고자 노력하였습니다.<br />
+                크롬을 권장합니다.
             </li>
         </ul>
     </div>
@@ -71,7 +72,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://www.youtube.com/watch?v=RNNIMpShaoQ"> <p class="_download">EXPLORE</p></a>
+        <a href="https://choyeseul.github.io/RealNightOff/NightOff/html/Start.html"> <p class="_download">EXPLORE</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
