--- a/html/NightOff.html
+++ b/html/NightOff.html
@@ -61,7 +61,7 @@
                 좋아하는 밴드인 NightOff를 소개하는 웹페이지입니다.
                 처음 CSS의 여러 기능들을 이해하며 사용하고, 웹 표준을 익히기 위해 만들었습니다.
                 여러 태그를 알맞게 사용하고 주제와 맞는 분위기를 연출하고자 노력하였습니다.<br />
-                크롬을 권장합니다.
+                사파리를 사용할 경우 경로를 이탈하는 경우가 있어 크롬 사용을 권장합니다.
             </li>
         </ul>
     </div>
