--- a/html/contact.html
+++ b/html/contact.html
@@ -48,7 +48,7 @@
                 <p>Contact 乂</p>
             </section>
             <div class="backcircle">
-                <img class="imageCircle" src="../img/imageCircle.png" />
+                <img class="_imageCircle" src="../img/imageCircle.png" />
             </div>
             <section id="section2">
                 <ul class="flex-con2">
