--- a/html/Momentrip.html
+++ b/html/Momentrip.html
@@ -62,7 +62,7 @@
                 Momentrip은 '순간을 여행하다'라는 키워드를 가진 여행 기록 어플리케이션으로써, 여행 기간동안
                 랜덤한 질문을 보내주어 그에 맞게 순간을 다양한 방식으로 여행을 기록하고 그 것을 아날로그 기록물로
                 받아볼 수 있는 서비스입니다.
-                서비스의 기획 및 일러스트, 영상, 반응형 웹 페이지 제작을 하였습니다.<br/>
+                서비스의 기획 및 일러스트, 영상, 포토북, 반응형 웹 페이지 제작을 하였습니다.<br/>
                 반응형 웹페이지는 핸드폰 디바이스(375px), 태블릿(1000px), pc(1550px)를 기준으로 나눠 작업하였습니다.
             </li>
         </ul>
@@ -74,7 +74,11 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="http://dmdpro.cafe24.com/degreeshow/2020/website/momentrip/Momentrip.html"> <p class="_download">EXPLORE</p></a>
+        <a href="http://dmdpro.cafe24.com/degreeshow/2020/website/momentrip/Momentrip.html" target="_blank"> <p class="_download">WEB</p></a>
+    </div>
+    <div class="download2">
+        <img class="_imageCircle2" src="../img/imageCircle 2.png" />
+        <a href="http://dmdpro.cafe24.com/degreeshow/2020/website/momentrip/Momentrip.html" target="_blank"> <p class="_download2">ILLUSTRATION</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
