--- a/html/NightOff.html
+++ b/html/NightOff.html
@@ -72,7 +72,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://choyeseul.github.io/RealNightOff/NightOff/html/Start.html"> <p class="_download">EXPLORE</p></a>
+        <a href="https://choyeseul.github.io/RealNightOff/NightOff/html/Start.html" target="_blank"> <p class="_download">EXPLORE</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
