--- a/html/MemoriesOfMatsuko.html
+++ b/html/MemoriesOfMatsuko.html
@@ -74,7 +74,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://drive.google.com/file/d/12fjnFLic8LloM3k87cI1Bl6w5IeiFzZL/view?usp=sharing" ><p class="_download">EXPLORE</p></a>
+        <a href="https://drive.google.com/file/d/12fjnFLic8LloM3k87cI1Bl6w5IeiFzZL/view?usp=sharing" target="_blank" ><p class="_download">EXPLORE</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
