--- a/html/Moonassi.html
+++ b/html/Moonassi.html
@@ -71,7 +71,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="../interactionPage/html/index.html"><p class="_download">EXPLORE</p></a>
+        <a href="../interactionPage/html/index.html" target="_blank"><p class="_download">EXPLORE</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
