--- a/html/Takkoyakki.html
+++ b/html/Takkoyakki.html
@@ -73,7 +73,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://drive.google.com/file/d/1mzlgtQHDBGCddCl5_sL1Tk3ZrwLgX6aP/view?usp=sharing"><p class="_download">Download</p></a>
+        <a href="https://drive.google.com/file/d/1mzlgtQHDBGCddCl5_sL1Tk3ZrwLgX6aP/view?usp=sharing" target="_blank"><p class="_download">Download</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
