--- a/html/WhatYum.html
+++ b/html/WhatYum.html
@@ -72,7 +72,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://www.youtube.com/watch?v=RNNIMpShaoQ"> <p class="_download">EXPLORE</p></a>
+        <a href="https://www.youtube.com/watch?v=RNNIMpShaoQ" target="_blank"> <p class="_download">EXPLORE</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
