--- a/html/contact.html
+++ b/html/contact.html
@@ -52,10 +52,10 @@
             </div>
             <section id="section2">
                 <ul class="flex-con2">
-                    <li><a href="https://www.instagram.com/132.o3/"><p class="list">Instagram</p></a><p class="Id">@132.o3</p></li>
+                    <li><a href="https://www.instagram.com/132.o3/" target="_blank"><p class="list">Instagram</p></a><p class="Id">@132.o3</p></li>
                     <li><p class="list">Phone</p><p class="Id">+82 10 - 9837 - 1302</p></li>
-                    <li><p class="list">E-mail</p><p class="Id">jys0323117@naver.com</p></li>
-                    <li><a href="https://www.youtube.com/channel/UCXetlUk8gXe9hhYtw7CKyDA?view_as=subscriber"><p class="list">YouTube</p></a></li>
+                    <li><p class="list">E-mail</p><p class="Id">132_o3@naver.com</p></li>
+                    <li><a href="https://www.youtube.com/channel/UCXetlUk8gXe9hhYtw7CKyDA?view_as=subscriber" target="_blank"><p class="list">YouTube</p></a></li>
                 </ul>
             </section>
             <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
