--- a/html/NightOff.html
+++ b/html/NightOff.html
@@ -46,9 +46,9 @@
                 </div>
                 <div class="loader" id="loader"></div>
             </div>
-            <a href="../html/Takkoyakki.html"><div class="_line0"></div></a>
+            <a href="../html/WhatYum.html"><div class="_line0"></div></a>
             <a href="../html/works.html"><div class="_line"></div></a>
-            <a href="../html/MemoriesOfMatsuko.html"><div class="_line2"></div></a>
+            <a href="../html/Momentrip.html"><div class="_line2"></div></a>
     </div>
     <div class="backcircle">
         <img class="imageCircle" src="../img/imageCircle.png" />
