--- a/html/Momentrip.html
+++ b/html/Momentrip.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="loader" id="loader"></div>
             </div>
-            <a href="../html/Takkoyakki.html"><div class="_line0"></div></a>
+            <a href="../html/NightOff.html"><div class="_line0"></div></a>
             <a href="../html/works.html"><div class="_line"></div></a>
             <a href="../html/MemoriesOfMatsuko.html"><div class="_line2"></div></a>
     </div>
@@ -78,7 +78,7 @@
     </div>
     <div class="download2">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="http://dmdpro.cafe24.com/degreeshow/2020/website/momentrip/Momentrip.html" target="_blank"> <p class="_download2">ILLUSTRATION</p></a>
+        <a href="https://drive.google.com/file/d/11O9Phii2uwdJFaNVdTX3K5vfjbF-hZtW/view?usp=sharing" target="_blank"> <p class="_download2">ILLUSTRATION</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
