--- a/html/Takkoyakki.html
+++ b/html/Takkoyakki.html
@@ -63,6 +63,7 @@
                 Navigation 기능과 tag기능을 활용하였습니다. Coroutine함수를 사용하여 사방에서 좀비 캐릭터가
                 나오도록 설계했습니다. 또한 캐릭터가 좀비 캐릭터와 부딪힐 때마다 Destroy 기능을 사용하여 현재의 
                 캐릭터가 파괴되고 새로운 캐릭터가 생성되도록 하였으며 목숨 값이 마이너스가 되도록 구성하였습니다.
+                캐릭터와 맵, 아이템등을 직접 디자인하고 제작하였습니다.
             </li>
         </ul>
     </div>
