--- a/html/index.html
+++ b/html/index.html
@@ -64,7 +64,7 @@
         <script src="../js/script.js"  type="text/javascript"></script>
         <script src="../js/script_intro.js"  type="text/javascript"></script>
         <script src="../js/cursorImageHover.js"  type="text/javascript"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
     </div>
 
     
