--- a/html/about.html
+++ b/html/about.html
@@ -32,7 +32,7 @@
                             </ul>
                             <div class="footerColor" id="footerColor">
                                 <p>    Designed by Yeseul.<br />
-                                    Kaywon Art&Design Univ.<br />
+                                    <!-- Kaywon Art&Design Univ.<br /> -->
                                     Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
                                 </p>
                             </div>
