--- a/html/WhatYum.html
+++ b/html/WhatYum.html
@@ -35,7 +35,7 @@
                             </ul>
                             <div class="footerColor" id="footerColor">
                                 <p>    Designed by Yeseul.<br />
-                                    Kaywon Art&Design Univ.<br />
+                                    <!-- Kaywon Art&Design Univ.<br /> -->
                                     Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
                                 </p>
                             </div>
@@ -85,7 +85,7 @@
 <footer>
     <div class="footerColor">
         <p>    Designed by Yeseul.<br />
-            Kaywon Art&Design Univ.<br />
+            <!-- Kaywon Art&Design Univ.<br /> -->
             Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
         </p>
     </div>
