--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
                             </ul>
                             <div class="footerColor" id="footerColor">
                                 <p>    Designed by Yeseul.<br />
-                                    Kaywon Art&Design Univ.<br />
+                                    <!-- Kaywon Art&Design Univ.<br /> -->
                                     Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
                                 </p>
                             </div>
@@ -71,10 +71,8 @@
 </body>
 <footer>
     <div class="footerColor">
-        <p>    Designed by Yeseul.<br />
-            Kaywon Art&Design Univ.<br />
-            Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
-        </p>
+        <h1>Designed by Yeseul.</h1>
+        <p>Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.</p>
     </div>
 </footer>
 </html>
