--- a/html/Moonassi.html
+++ b/html/Moonassi.html
@@ -61,7 +61,7 @@
                 평소 좋아하던 작가인 Moonassi의 작품을 볼 수 있는 페이지를 제작하였습니다.
                 JavaScript를 처음 활용하여 만든 작품이며 Dark Mode, Light Mode의 기능을 Toggle Button을 사용하여
                 디자인하였습니다. 또한 마우스의 위치값을 받아와 마우스가 움직일 때마다 오브젝트 생성, 오브젝트의 움직임등을
-                조정하였습니다. Sroll을 이용하여 간단한 애니메이션을 주었고 JavaScript를 사용하여 역스크롤을 구현하였습니다. 
+                조정하였습니다. Scroll을 이용하여 간단한 애니메이션을 주었고 JavaScript를 사용하여 역스크롤을 구현하였습니다. 
             </li>
         </ul>
     </div>
