--- a/html/Momentrip.html
+++ b/html/Momentrip.html
@@ -33,11 +33,9 @@
                                 <li><a href="./about.html" id="AboutPage"><p class="IndexNumber">03</p><p class="Sub">About 乂</p></a></li>
                                 <li><a href="./contact.html" id="ContactPage"><p class="IndexNumber2">04</p><p class="Sub">Contact 乂</p></a></li>
                             </ul>
-                            <div class="footerColor" id="footerColor">
-                                <p>    Designed by Yeseul.<br />
-                                    <!-- Kaywon Art&Design Univ.<br /> -->
-                                    Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
-                                </p>
+                            <div class="footerColor2" id="footerColor2">
+                                <h1>Designed by Yeseul.</h1>
+                                <p>Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.</p>
                             </div>
                             <div class="MenuCircle"></div>
                             <img class="imageCircle" id="_menu0" src="../img/imageCircle.png" />
@@ -90,10 +88,8 @@
 </body>
 <footer>
     <div class="footerColor">
-        <p>    Designed by Yeseul.<br />
-            <!-- Kaywon Art&Design Univ.<br /> -->
-            Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
-        </p>
+        <h1>Designed by Yeseul.</h1>
+        <p>Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.</p>
     </div>
 </footer>
 </html>
