--- a/html/NightPicnic.html
+++ b/html/NightPicnic.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link href="../css/reset.css" rel="stylesheet" />
-    <link href="../css/works_Memories.css" rel="stylesheet" />
+    <link href="../css/works_NightPicnic.css" rel="stylesheet" />
     <link rel="SHORTCUT ICON" href="../img/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Noto+Serif:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
-    <title>Memories Of Matsuko</title>
+    <title>Night Picnic</title>
 </head>
 <body>
     <div class="loader" id="loader"></div>
@@ -54,14 +54,14 @@
     <div class="ContentsMenu">
         <ul class="_ContentMenu">
             <li class="_1" id="dynamic"></li>
-            <li class="_2"><strong>Use</strong> - Adobe Illustration</li>
+            <li class="_2"><strong>Use</strong> - CSS, HTML, JAVASCRIPT, Illustration</li>
             <li class="_3">
-                ‘혐오스런 마츠코의 일생 영화’를 보고 느낀바를 백터로 작업했습니다.<br/>
-                실제 인쇄가 목적이었기 때문에 RGB가 아닌 CMYK로 작업을 하였고,
-                크기는 1280x800px로,
-                72ppi로 작업하였습니다.
-                일러스트레이터를 사용하였고, 영화의 느낌을 살리기 위해 비비드한 컬러 사용과 
-                난잡한 화면 구성을 목표로 했습니다.
+                좋아하는 노래인 'Night Picnic - Nana'의 프로모션 애니메이션 웹사이트를 기획, 디자인, 제작하였습니다.<br/>
+                노래를 효과적이고 재미있게 홍보할 수 있는 방법에 대해 고민을 하고 기획을 하였습니다.
+                그 결과 노래에 맞춰 애니메이션이 재생되면 재미있겠다는 생각을 하게 되었고, 
+                JavaScript의 setTimeOut 기능을 사용하여 일정한 시간이 되면 동작이 되거나 멈추도록 계산하여 
+                실제 그 웹페이지 구현에 도전하게 되었습니다. 시간을 계산하여 정밀하게 코딩 작업을 해야 했기에 
+                많은 고민과 파생된 연습 웹페이지들을 만들게 된 비하인드 스토리가 있습니다. 짧은 시간 안에 구현을 해내게 되어서 굉장히 기뻤습니다! (완성까지 약 3일 소요)
             </li>
         </ul>
     </div>
@@ -78,7 +78,7 @@
     <script src="../js/script.js"  type="text/javascript"></script>
     <script src="../js/zoomIn.js"  type="text/javascript"></script>
     <script src="../js/worksClick.js"  type="text/javascript"></script>
-    <script src="../js/script_memories.js"  type="text/javascript"></script>
+    <script src="../js/script_NightPicnic.js"  type="text/javascript"></script>
     <script src="../js/cursorImageHover.js"  type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
 </body>
