--- a/html/contact.html
+++ b/html/contact.html
@@ -66,10 +66,8 @@
 </body>
 <footer>
     <div class="footerColor">
-        <p>    Designed by Yeseul.<br />
-            <!-- Kaywon Art&Design Univ.<br /> -->
-            Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
-        </p>
+        <h1>Designed by Yeseul.</h1>
+        <p>Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.</p>
     </div>
 </footer>
 </html>
