--- a/html/works.html
+++ b/html/works.html
@@ -51,6 +51,7 @@
     </div>
     <div class="ContentsMenu">
         <ul class="_ContentMenu">
+            <li class="_0">Night Picnic</li>
             <li class="_1">Memories of Matsuko</li>
             <li class="_2">MOONASSI</li>
             <li class="_3">Takkoyakki 
@@ -76,10 +77,8 @@
 </body>
 <footer>
     <div class="footerColor">
-        <p>    Designed by Yeseul.<br />
-            <!-- Kaywon Art&Design Univ.<br /> -->
-            Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.
-        </p>
+        <h1>Designed by Yeseul.</h1>
+        <p>Copyrightⓒ2020 Cho Yeseul (@132.o3) Co., Ltd. All rights reserved.</p>
     </div>
 </footer>
 </html>
