--- a/html/NightPicnic.html
+++ b/html/NightPicnic.html
@@ -66,13 +66,13 @@
         </ul>
     </div>
     <div class="wrap-images">
-        <img id="ContentsImg" class="imageContents1 image zoom" src="../img/Contents1.jpg" />
+        <img id="ContentsImg" class="imageContents1 image zoom" src="../img/Contents0.jpg" />
         <!-- <img id="ContentsImg" class="imageContents2" src="../img/Contents1_1.jpg" />
         <img id="ContentsImg" class="imageContents3" src="../img/Contents1_2.jpg" /> -->
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://drive.google.com/file/d/1Y99CAqNUSnaw0Wb5djFOtW3fNHbNFmrM/view?usp=sharing" target="_blank" ><p class="_download">EXPLORE</p></a>
+        <a href="https://choyeseul.github.io/NightPicnic/NightPicnic/html/index.html" target="_blank" ><p class="_download">EXPLORE</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
