--- a/html/NightOff.html
+++ b/html/NightOff.html
@@ -44,9 +44,9 @@
                 </div>
                 <div class="loader" id="loader"></div>
             </div>
-            <a href="../html/WhatYum.html"><div class="_line0"></div></a>
+            <a href="../html/Moonassi.html"><div class="_line0"></div></a>
             <a href="../html/works.html"><div class="_line"></div></a>
-            <a href="../html/Momentrip.html"><div class="_line2"></div></a>
+            <a href="../html/MemoriesOfMatsuko.html"><div class="_line2"></div></a>
     </div>
     <div class="backcircle">
         <img class="imageCircle" src="../img/imageCircle.png" />
@@ -70,7 +70,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://choyeseul.github.io/RealNightOff/NightOff/html/Start.html" target="_blank"> <p class="_download">EXPLORE</p></a>
+        <a href="https://choyeseul.github.io/NightOff/RealNightOff/NightOff/html/Start.html" target="_blank"> <p class="_download">EXPLORE</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
