--- a/html/Takkoyakki.html
+++ b/html/Takkoyakki.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="loader" id="loader"></div>
             </div>
-            <a href="../html/Moonassi.html"><div class="_line0"></div></a>
+            <a href="../html/MemoriesOfMatsuko.html"><div class="_line0"></div></a>
             <a href="../html/works.html"><div class="_line"></div></a>
             <a href="../html/WhatYum.html"><div class="_line2"></div></a>
     </div>
