--- a/html/about.html
+++ b/html/about.html
@@ -89,7 +89,7 @@
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://drive.google.com/file/d/1C41mZq-uDTN98SUooHO4iHzcUVhAejge/view?usp=sharing" target="_blank"><p class="_download">DOWNLOAD</p></a>
+        <a href="../download/download.pdf" target="_blank" download=""><p class="_download">DOWNLOAD</p></a>
     </div>
     <div class="_info">
         <ul class="info">
