--- a/html/Stalker.html
+++ b/html/Stalker.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link href="../css/reset.css" rel="stylesheet" />
-    <link href="../css/works_Momentrip.css" rel="stylesheet" />
+    <link href="../css/works_Stalker.css" rel="stylesheet" />
     <link rel="SHORTCUT ICON" href="../img/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Noto+Serif:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
-    <title>Momentrip</title>
+    <title>Stalker</title>
 </head>
 <body>
     <div class="loader" id="loader"></div>
@@ -44,9 +44,9 @@
                 </div>
                 <div class="loader" id="loader"></div>
             </div>
-            <a href="../html/NightPicnic.html"><div class="_line0"></div></a>
+            <a href="../html/WhatYum.html"><div class="_line0"></div></a>
             <a href="../html/works.html"><div class="_line"></div></a>
-            <a href="../html/Moonassi.html"><div class="_line2"></div></a>
+            <a href="../html/NightPicnic.html"><div class="_line2"></div></a>
     </div>
     <div class="backcircle">
         <img class="imageCircle" src="../img/imageCircle.png" />
@@ -54,34 +54,29 @@
     <div class="ContentsMenu">
         <ul class="_ContentMenu">
             <li class="_1" id="dynamic"></li>
-            <li class="_2"><strong>Use</strong> - HTML, CSS, Illustration, AfterEffects</li>
+            <li class="_2"><strong>Use</strong> - Premiere Pro , AfterEffect</li>
             <li class="_3">
-                팀 프로젝트 'DarkCircle'의 'Momentrip' 프로젝트입니다.
-                Momentrip은 '순간을 여행하다'라는 키워드를 가진 여행 기록 어플리케이션으로써, 여행 기간동안
-                랜덤한 질문을 보내주어 그에 맞게 순간을 다양한 방식으로 여행을 기록하고 그 것을 아날로그 기록물로
-                받아볼 수 있는 서비스입니다.
-                저는 서비스의 기획 및 일러스트, 영상, 포토북, 반응형 웹 페이지 제작을 하였습니다.<br/>
-                반응형 웹페이지는 핸드폰 디바이스(375px), 태블릿(1000px), pc(1550px)를 기준으로 나눠 작업하였습니다.
+                계원 디지털 미디어 디자인 기초영상 부분 우수작으로 선정되어 연말 PT 대표작으로 선정되었던
+                스토커 뮤직비디오 입니다. 팀 프로젝트로 진행되었고, 저는 전체적인 기획 및 아이디어 정리, 주인공 출연, 촬영본 편집을 하였습니다.
+                'Explore' 버튼을 누르셔서 제 유튜브 계정으로 가시면 스토커 뮤직비디오 뿐만 아니라 
+                제가 제작한 모션 그래픽등의 다양한 개인 작업 영상 제작물을 확인하실 수 있습니다.
+                (많이 오동통한 제 모습을 보실 수 있습니당..민망..)
             </li>
         </ul>
     </div>
     <div class="wrap-images">
-        <img id="ContentsImg" class="imageContents1 image zoom" src="../img/Momentrip.png" />
+        <img id="ContentsImg" class="imageContents1 image zoom" src="../img/Contents7_1.jpg" />
         <!-- <img id="ContentsImg" class="imageContents2" src="../img/Contents1_1.jpg" />
         <img id="ContentsImg" class="imageContents3" src="../img/Contents1_2.jpg" /> -->
     </div>
     <div class="download">
         <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="http://dmdpro.cafe24.com/degreeshow/2020/website/momentrip/Momentrip.html" target="_blank"> <p class="_download">WEB</p></a>
-    </div>
-    <div class="download2">
-        <img class="_imageCircle2" src="../img/imageCircle 2.png" />
-        <a href="https://drive.google.com/file/d/11O9Phii2uwdJFaNVdTX3K5vfjbF-hZtW/view?usp=sharing" target="_blank"> <p class="_download2">ILLUSTRATION</p></a>
+        <a href="https://www.youtube.com/watch?v=ighH-FpYIPU" target="_blank"><p class="_download">Explore</p></a>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/script.js"  type="text/javascript"></script>
-    <script src="../js/script_Momentrip.js"  type="text/javascript"></script>
     <script src="../js/worksClick.js"  type="text/javascript"></script>
+    <script src="../js/script_Stalker.js"  type="text/javascript"></script>
     <script src="../js/zoomIn.js"  type="text/javascript"></script>
     <script src="../js/cursorImageHover.js"  type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
