--- a/html/works.html
+++ b/html/works.html
@@ -66,7 +66,9 @@
     <div class="listColor">
         <ul>
             <li>Web Development</li>
-            <li>etc</li>
+            <li>Illustration</li>
+            <li>Unity</li>
+            <li>Movie, MotionGraphic</li>
         </ul>
     </div>
     <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
